Implement getting server ip and port from user

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     namespace 'com.codewithkael.webrtcprojectforrecord'
     compileSdk 32
     buildFeatures {
-        viewBinding = true
+        dataBinding true
     }
     defaultConfig {
         applicationId "com.codewithkael.webrtcprojectforrecord"
