--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,9 +6,16 @@ plugins {
 android {
     namespace 'com.codewithkael.webrtcprojectforrecord'
     compileSdk 32
+
     buildFeatures {
         dataBinding true
+        compose true
     }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.1.1'
+    }
+
     defaultConfig {
         applicationId "com.codewithkael.webrtcprojectforrecord"
         minSdk 21
@@ -49,5 +56,18 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.9.1'
     implementation 'com.guolindev.permissionx:permissionx:1.6.1'
 
+    // Hilt and Navigation compose integration
+    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
+    // Integration with activities
+    implementation 'androidx.activity:activity-compose:1.4.0'
+    // Compose Material Design
+    implementation 'androidx.compose.material:material:1.1.1'
+    // Animations
+    implementation 'androidx.compose.animation:animation:1.1.1'
+    // Tooling support (Previews, etc.)
+    implementation 'androidx.compose.ui:ui-tooling:1.1.1'
+    // Integration with ViewModels
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.4.1'
 
+    implementation "androidx.compose.runtime:runtime:1.1.1"
 }
